# general-bot

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  README.md  build-development.sh  build-production.sh  docker-compose.yaml
bot/: .dockerignore  Cargo.toml  Dockerfile
bot/src/: cache.rs  main.rs
bot/src/api/: router.rs
bot/src/api/routes/: get_configs.rs  logger_blocklist.rs  mod.rs  prefix.rs  timezone.rs  update_prefix.rs
bot/src/commands/: insert_users.rs  mod.rs
bot/src/commands/admin/: insert_users.rs  kick.rs  mod.rs  softban.rs
bot/src/commands/admin/ban/: ban.rs  mod.rs  unban.rs
bot/src/commands/admin/mute/: mod.rs  mute.rs  unmute.rs
bot/src/commands/admin/note/: clearnotes.rs  delnote.rs  editnote.rs  mod.rs  note.rs  notes.rs
bot/src/commands/admin/warnings/: delwarn.rs  mod.rs  warn.rs  warnings.rs
bot/src/commands/general/: info.rs  mod.rs  ping.rs
bot/src/events/: all_shards_ready.rs  guild_create.rs  guild_member_addition.rs  guild_member_removal.rs  interaction_create.rs  message.rs  message_delete.rs  message_delete_bulk.rs  message_update.rs  mod.rs  ready.rs
bot/src/events/checkers/: mod.rs  role_check.rs
bot/src/events/hooks/: after.rs  before.rs  dispatch_error.rs
bot/src/models/: bot_config.rs  channels.rs  command_config.rs  context.rs  emoji.rs  general_config.rs  member.rs  mod.rs  notes.rs  roles.rs  traits.rs
bot/src/models/configs/: cmd_allowed_ids.rs  config_manager.rs  general.rs  logger_blocklist.rs  mod.rs
bot/src/models/punishments/: ban.rs  deaf.rs  kick.rs  mod.rs  mute.rs  softban.rs  warn.rs
bot/src/services/: commands.rs  logger.rs  mod.rs  mongodb.rs
bot/src/utils/: constants.rs  embeds.rs  functions.rs  gb_serializer.rs  mod.rs  setup.rs
bot/src/utils/embeds/: default_messages.rs  help_embeds.rs  mod.rs
mongo/: Dockerfile  init-mongo.sh  keyFile.txt  mongod.conf
src/: cache.rs  events.rs  main.rs
src/commands/: info.rs  ping.rs
src/events/: guild_create.rs  interaction_create.rs  mod.rs  ready.rs
src/events/hooks/: after.rs  before.rs  mod.rs
src/models/: bot_config.rs  mod.rs
src/services/: commands.rs  logger.rs  mod.rs  mongodb.rs
src/utils/: constants.rs  embeds.rs
