[package]
name = "general-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
reqwest = '0.11.14'
serde = { version = "1.0.*", features = ["derive"] }
lru-cache = "0.1"
openssl = { version = "0.10", features = ["vendored"] }
chrono = "0.4.23"
mongodb = "2.3.1"