[package]
name = "general-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
reqwest = '0.11.14'
serde = { version = "1.0.*", features = ["derive"] }
lru-cache = "0.1"
openssl = { version = "0.10", features = ["vendored"] }
chrono = "0.4.23"
mongodb = "2.3.1"
bson = { version = "2.5.0", features = ["chrono-0_4"]}
futures = "0.3"
axum = "0.6.11"
pretty_env_logger = "0.4.0"
log = "0.4.17"

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
    "collector",
    "cache",
    "gateway", 
    "builder", 
    "standard_framework", 
    "http", 
    "model", 
    "client", 
    "framework", 
    "utils", 
    "rustls_backend"
]