[package]
name = "general-bot"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
reqwest = '0.11.14'
serde = { version = "1.0.*", features = ["derive"] }
serde_with = "3"
lru-cache = "0.1"
openssl = { version = "0.10", features = ["vendored"] }
chrono = { version = "0.4.23", features = ["unstable-locales"]}
mongodb = "2.3.1"
bson = { version = "2.6", features = ["chrono-0_4", "serde_with"]}
futures = "0.3"
axum = "0.6.11"
pretty_env_logger = "0.5.0"
log = "0.4.17"
poise = "0.5"
fancy-regex = "0.11.0"
urlencoding = "2.1.2"

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
    "collector",
    "cache",
    "gateway", 
    "builder", 
    # "standard_framework", 
    "http", 
    "model", 
    "client", 
    # "framework", 
    "utils", 
    "rustls_backend",
    "unstable_discord_api"
]